--- a/My Array.html
+++ b/My Array.html
@@ -31,7 +31,8 @@
 
 
 			var n=document.getElementById("n").value;
-var a=prompt("Enter number");
+		var a=[];
+a.push(prompt("Enter number"));
 var old=document.getElementById("get").value;
 document.getElementById("ge").innerHTML=old.remove(a);
 }
