--- a/My Array.html
+++ b/My Array.html
@@ -32,6 +32,7 @@
 
 			var n=document.getElementById("n").value;
 		var a=[];
+		var old=[];
 a.push(prompt("Enter number"));
 var old=document.getElementById("get").value;
 document.getElementById("ge").innerHTML=old.remove(a);
