--- a/My Array.html
+++ b/My Array.html
@@ -10,33 +10,34 @@
 	<input type="text" id="num" name="">
 	<input type="button" value="Print Array" onclick="add()" name=""><br><br>
 
-	Enter Number Of Elements to insert:
+	Enter Number Of Elements to remove:
 	<input type="text" id="n" name="">
 	<input type="button" value="Remove" onclick="rem()" name=""><br><br>
 	<div id="get"></div><br><br>
-		<div id="get"></div><br><br>
 </div>
 <script type="text/javascript">
+	var arr=[];
 	function add(){
 		var num=document.getElementById("num").value;
-		var arr=[];
 		for(var i=0;i<num;i++)
 			arr.push(prompt("Enter number"));
 		document.getElementById("get").innerHTML=arr;
 	}
-	</script>
-<script>
 
-	function rem(){
+function rem(){
 
+	
+arr=arr.filter(repnum);
+document.getElementById("get").innerHTML=arr;
 
-			var n=document.getElementById("n").value;
-		var a=[];
-		var old=[];
-a.push(prompt("Enter number"));
-var old=document.getElementById("get").value;
-document.getElementById("ge").innerHTML=old.remove(a);
 }
+function repnum(value){
+		var n=document.getElementById("n").value;
+
+      return value !==n;
+	
+}
+
 </script>
 
 
